# MAI_LABS_OOP

1_var_11/: CMakeLists.txt
1_var_11/src/: aboba  func.cpp  func.hpp  main.cpp
1_var_11/tests/: test  tests.cpp
2_var_1/: CMakeLists.txt
2_var_1/src/: decimal.cpp  decimal.hpp
2_var_1/tests/: tests.cpp
3_var_13/: CMakeLists.txt
3_var_13/src/: main.cpp
3_var_13/src/figures/: Figure.cpp  Figure.hpp  Hexagon.cpp  Hexagon.hpp  Pentagon.cpp  Pentagon.hpp  Point.hpp  Rhomb.cpp  Rhomb.hpp
3_var_13/tests/: tests.cpp
4_var_15/: CMakeLists.txt
4_var_15/src/: main.cpp
4_var_15/src/headers/: array.hpp  concepts.hpp  figure.hpp  figure_utils.hpp  geometry_utils.hpp  hexagon.hpp  octagon.hpp  point.hpp  polygon.hpp  triangle.hpp
4_var_15/tests/: tests.cpp
5_var_13/: CMakeLists.txt
5_var_13/src/: linkedlist.hpp  main.cpp  single_block.cpp  single_block.hpp
5_var_13/tests/: tests.cpp
6_var_11/: CMakeLists.txt
6_var_11/src/: main.cpp
6_var_11/src/editor/: editor.cpp  editor.hpp
6_var_11/src/npc/: druid.cpp  druid.hpp  elf.cpp  elf.hpp  knight.cpp  knight.hpp  npc.cpp  npc.hpp  types.hpp
6_var_11/src/patterns/: battle_visitor.cpp  battle_visitor.hpp  npc_factory.cpp  npc_factory.hpp  observer.cpp  observer.hpp
6_var_11/tests/: tests.cpp
7_var_11/: CMakeLists.txt
7_var_11/logs/: log.txt
7_var_11/src/: main.cpp  render.hpp
7_var_11/src/editor/: editor.cpp  editor.hpp
7_var_11/src/npc/: druid.cpp  druid.hpp  elf.cpp  elf.hpp  knight.cpp  knight.hpp  npc.cpp  npc.hpp  types.hpp
7_var_11/src/patterns/: battle_visitor.cpp  battle_visitor.hpp  dispatch_queue.hpp  movement_visitor.cpp  movement_visitor.hpp  npc_factory.cpp  npc_factory.hpp  observer.cpp  observer.hpp  visitor.hpp
7_var_11/tests/: tests.cpp
